# napi-blitz

./: .gitignore  Cargo.toml  README-zh.md  README.md  index.d.ts  index.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json
.github/workflows/: CI.yml
__test__/: _helpers.ts  attributes.spec.ts  buffer-renderer.spec.ts  document.spec.ts  dom-mutation-style.spec.ts  events.spec.ts  fonts.spec.ts  index.spec.ts  node-tree.spec.ts  serialization.spec.ts  style.spec.ts  window-options.spec.ts
examples/html-tags/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
examples/html-tags/src/: main.ts
examples/vue-jsx/: deno.json  index.ts  package.json  pnpm-lock.yaml  tsconfig.json
examples/vue-jsx-dom/: index.ts  package.json  pnpm-lock.yaml
examples/vue-jsx-dom/src/: main.ts
examples/vue-jsx-dom/src/components/: Btn.tsx
examples/vue-jsx-multi-window/: index.ts  package.json
examples/vue-jsx-multi-window/src/: child.tsx  keys.ts  main.ts  renderer.ts
examples/vue-jsx-multi-window/src/components/: MainApp.tsx
examples/vue-jsx-multi-window/src/utils/: color.ts
examples/vue-jsx/src/: App.tsx  Hello.tsx  mian.ts
examples/vue-jsx/src/components/: Btn.tsx  Counter.tsx  Hello.tsx
examples/vue-jsx/src/utils/: color.ts
native/: index.d.ts  index.js
scripts/: build.cjs  fixup-native-dts.cjs
src/: app.rs  app_bridge.rs  app_handler.rs  buffer.rs  doc.rs  dom.rs  event.rs  lib.rs  ops.rs  payload.rs  window.rs
src/buffer_surface/: mod.rs  renderer.rs
src/dom/: doc.rs  event.rs  mod.rs  ops.rs  payload.rs
src/js/: app.ts  document.ts  element.ts  events.ts  index.ts  native.ts
src/js/base/: character-data.ts  comment.ts  node.ts
src/js/buffer/: app.ts
src/js/document/: document.ts  html-document.ts  svg-document.ts  xml-document.ts
src/js/element/: attributes.ts  element.ts  html-element.ts  style.ts
src/js/host/: app.ts  window.ts
src/js/internal/: internal.ts
src/native_window/: app.rs  app_bridge.rs  app_handler.rs  mod.rs  window.rs
