[package]
authors = ["ZhangChao <jerry4718@qq.com>"]
edition = "2024"
name = "napi_blitz"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi-derive = "3.5.6"
winit = "0.31.0-beta.2"

[dependencies.napi]
version = "3.9.3"
features = ["napi6", "async"]

[dependencies.blitz]
version = "=0.3.0-alpha.5"
default-features = false
features = ["net"]

# Depend on blitz-dom directly with `system_fonts` enabled. Cargo unifies
# features across all dependents, so the `blitz` crate's internal
# `blitz-dom` dependency picks up `system_fonts` too. Without this,
# fontique does not register system fonts and text renders as empty boxes.
[dependencies.blitz-dom]
version = "=0.3.0-alpha.5"
default-features = false
features = ["system_fonts"]

# Stylo / selectors, pinned to the same versions blitz uses so the
# trait impls in blitz-dom's private `stylo` module (which are written
# against `&Node`) line up with the crates we call directly. The stylo
# crate's lib name is `style`, so we import it under that name to match
# blitz's own usage.
[dependencies.style]
version = "0.18.0"
package = "stylo"
[dependencies.selectors]
version = "0.38.0"

[dependencies.anyrender_vello]
version = "0.11.0"

[dependencies.parley]
version = "0.10"
default-features = false
features = ["std"]

[build-dependencies]
napi-build = "2.3.2"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
