[package]
authors = ["ZhangChao <jerry4718@qq.com>"]
edition = "2024"
name = "napi_blitz"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi-derive = "3.5.6"
winit = "0.31.0-beta.2"
keyboard-types = "0.8.3"
smol_str = "0.3.6"

[dependencies.napi]
version = "3.9.3"
features = ["napi6", "async"]

[dependencies.blitz]
version = "=0.3.0-alpha.5"
default-features = false
features = ["net"]

[dependencies.anyrender_vello]
version = "0.11.0"

[dependencies.parley]
version = "0.10"
default-features = false
features = ["std"]

[build-dependencies]
napi-build = "2.3.2"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
